--- a/base/css/style.css
+++ b/base/css/style.css
@@ -879,22 +879,22 @@ body ::-webkit-scrollbar-track {
   display: none;
   position: fixed;
   z-index: 2;
-  padding: 1.2rem;
+  padding: 0.5rem;
   border-radius: 0.5rem;
   background: #fff;
-  -webkit-box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.25);
 }
 .menu-popup:hover {
   cursor: pointer;
 }
 .menu-popup a {
   display: block;
-  padding: 0.4rem 1rem;
-  line-height: 100%;
+  padding: 0 1rem;
+  line-height: 2.3rem;
   text-align: center;
-  font-size: 1.2rem;
-  color: #727272;
+  font-size: 1.4rem;
+  color: #999999;
   font-weight: 500;
   border-radius: 0.5rem;
   border: 1px solid #e8e8e8;
@@ -2969,7 +2969,6 @@ body ::-webkit-scrollbar-track {
 }
 .los-legend-container.tab .tab-header a.active {
   color: #fff;
-  font-weight: 700;
   background: #03a0fc;
 }
 .los-legend-container.tab .los-legend-content {
@@ -3011,7 +3010,7 @@ body ::-webkit-scrollbar-track {
   text-align: center;
   font-size: 1.4rem;
   color: #fff;
-  font-weight: 600;
+  font-weight: 500;
 }
 .los-legend-container.tab .traffic-report .state span:nth-child(1) {
   background: #4fb500;
@@ -3230,9 +3229,9 @@ body ::-webkit-scrollbar-track {
           align-items: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  gap: 0 1rem;
+  gap: 0 1.2rem;
   margin-top: 2.8rem;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: 300;
 }
 .paging-group a {
@@ -3261,26 +3260,26 @@ body ::-webkit-scrollbar-track {
   gap: 0 0.4rem;
 }
 .paging-group .btn-first {
-  width: 2rem;
-  height: 2rem;
+  width: 2.2rem;
+  height: 2.2rem;
   background-image: url("/base/images/icon_paging_arr_double.png");
   background-repeat: no-repeat;
   background-position: 0 0;
   background-size: contain;
 }
 .paging-group .btn-prev {
-  width: 2rem;
-  height: 2rem;
+  width: 2.2rem;
+  height: 2.2rem;
   background-image: url("/base/images/icon_paging_arr.png");
   background-repeat: no-repeat;
   background-position: 0 0;
   background-size: contain;
-  margin-left: -0.6rem;
-  margin-right: 0.6rem;
+  margin-left: -0.8rem;
+  margin-right: 0.3rem;
 }
 .paging-group .btn-next {
-  width: 2rem;
-  height: 2rem;
+  width: 2.2rem;
+  height: 2.2rem;
   background-image: url("/base/images/icon_paging_arr.png");
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -3288,12 +3287,12 @@ body ::-webkit-scrollbar-track {
   -webkit-transform: rotate(180deg);
       -ms-transform: rotate(180deg);
           transform: rotate(180deg);
-  margin-left: 0.6rem;
-  margin-right: -0.6rem;
+  margin-left: 0.3rem;
+  margin-right: -0.8rem;
 }
 .paging-group .btn-end {
-  width: 2rem;
-  height: 2rem;
+  width: 2.2rem;
+  height: 2.2rem;
   background-image: url("/base/images/icon_paging_arr_double.png");
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -3303,14 +3302,15 @@ body ::-webkit-scrollbar-track {
           transform: rotate(180deg);
 }
 .paging-group .selectbox-wrap {
-  margin-left: 0.3rem;
+  margin-left: -0.2rem;
 }
 .paging-group .selectbox-wrap select {
   min-width: 5.7rem;
-  height: 2.6rem;
+  height: 2.2rem;
   line-height: 100%;
-  padding: 0.4rem 2.4rem 0.4rem 0.2rem;
+  padding: 0 2.4rem 0 0.2rem;
   font-weight: 300;
+  font-size: 1.6rem;
   color: #a7a7a7;
   background-image: url(/base/images/arr_down_gray.png);
 }
@@ -3382,6 +3382,13 @@ body ::-webkit-scrollbar-track {
   display: inline-flex;
   gap: 0 1rem;
 }
+.filter-grouop .selectbox-wrap.primary.label-none select {
+  height: 3rem;
+  font-size: 1.6rem;
+}
+.filter-grouop .ui.input.md.label-none {
+  height: 3rem;
+}
 .filter-grouop .label-dropdown,
 .filter-grouop .label-input {
   -webkit-box-flex: 0;
@@ -3395,6 +3402,8 @@ body ::-webkit-scrollbar-track {
   -webkit-box-flex: 0;
       -ms-flex: 0;
           flex: 0;
+  line-height: 2.6rem;
+  font-size: 1.6rem;
 }
 .filter-grouop .date-group {
   display: -webkit-box;
@@ -3481,8 +3490,19 @@ body ::-webkit-scrollbar-track {
 .button-function-group .ui.buttons {
   gap: 0 0.4rem;
 }
-.button-function-group .ui.secondary.button {
-  min-width: 8rem;
+.button-function-group .ui.button.basic.secondary.rounded {
+  min-width: 6rem;
+  padding: 0;
+  line-height: 2.9rem;
+  font-size: 1.6rem;
+  border-radius: 0.5rem;
+}
+.button-function-group .ui.primary.basic.button.rounded {
+  min-width: 11.3rem;
+  padding: 0;
+  line-height: 2.9rem;
+  font-size: 1.6rem;
+  border-radius: 0.5rem;
 }
 
 .button-group-only-right {
@@ -3691,6 +3711,7 @@ body ::-webkit-scrollbar-track {
 .line-box-container .box .tit {
   line-height: 1.7rem;
   font-weight: 500;
+  color: #1e5f8d;
 }
 .line-box-container .box .txt {
   font-weight: 600;
@@ -3772,6 +3793,7 @@ body ::-webkit-scrollbar-track {
   padding: 0.3rem 1rem;
   border-color: #e8e8e8;
   color: #cbcbcb;
+  font-size: 1.4rem;
 }
 .line-box-container .state-tbl td .radio-txt2 input:checked + span {
   color: #727272;
@@ -4612,8 +4634,8 @@ body ::-webkit-scrollbar-track {
       -ms-flex: 1;
           flex: 1;
   line-height: 3rem;
-  font-size: 1.6rem;
-  font-weight: 600;
+  font-size: 1.4rem;
+  font-weight: 400;
 }
 .map-popup .inner {
   display: -webkit-box;
@@ -5092,7 +5114,7 @@ body ::-webkit-scrollbar-track {
   color: #fff;
 }
 .car-num-recog-popup .car-num-recog-list .car-num-tbl th {
-  font-weight: 700;
+  font-weight: 500;
 }
 .car-num-recog-popup .car-num-recog-list .car-num-tbl td {
   text-align: right;
@@ -6120,13 +6142,13 @@ body ::-webkit-scrollbar-track {
   padding-bottom: 0.915rem;
 }
 .ly-setting .ui.breadcrumb {
-  padding: 3.6rem 0 3.7rem;
+  padding: 3.6rem 0 1.7rem;
 }
 .ly-setting .filter-grouop {
-  margin-bottom: 3.7rem;
+  margin-bottom: 1.7rem;
 }
 .ly-setting .button-function-group {
-  margin-bottom: 1.3rem;
+  margin-bottom: 1.5rem;
 }
 .ly-setting > .data-tbl-very .ui.very.basic.table {
   table-layout: fixed;
@@ -6575,6 +6597,7 @@ body ::-webkit-scrollbar-track {
 .gnb .ui.menu > .dropdown .menu {
   overflow: hidden;
   min-width: 19.8rem !important;
+  padding: 0.5rem;
   border-radius: 0.8rem !important;
   border: 1px solid #5b87a7;
   background: #0f3f62;
@@ -6616,6 +6639,7 @@ body ::-webkit-scrollbar-track {
   padding: 0;
   font-family: Pretendard, Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
   font-size: 1.6rem;
+  font-weight: 500;
   color: #fff;
 }
 .gnb .ui.menu > .dropdown .menu .ui.accordion .title:hover {
@@ -6652,6 +6676,7 @@ body ::-webkit-scrollbar-track {
   padding: 0 0.6rem 0 0.6rem;
   line-height: 4.5rem;
   font-size: 1.6rem;
+  font-weight: 500;
   color: #fff;
 }
 .gnb .ui.menu > .dropdown .menu .ui.accordion > .content .item:hover {
@@ -6753,8 +6778,8 @@ body ::-webkit-scrollbar-track {
   height: 2rem;
   background-image: url("/base/images/icon_crossroad.png");
   background-repeat: no-repeat;
-  background-position: 0 0;
-  background-size: contain;
+  background-position: 50% 0;
+  background-size: 2.1rem 1.7rem;
   margin-right: 1.3rem;
 }
 .gnb .ui.menu > .item.link-crossroad:hover::before {
@@ -6817,12 +6842,12 @@ body ::-webkit-scrollbar-track {
 .gnb .aside .btn-bell.outbreak-active::after {
   content: "";
   display: block;
-  width: 1.6rem;
-  height: 1.6rem;
+  width: 1.5rem;
+  height: 1.5rem;
   background-image: url("/base/images/icon_triangle_exclamation_red2.png");
   background-repeat: no-repeat;
   background-position: 0 0;
-  background-size: contain;
+  background-size: 1.8rem;
 }
 .gnb .aside .btn-bell.hindrance-active::after {
   content: "";
@@ -7756,8 +7781,9 @@ body ::-webkit-scrollbar-track {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
@@ -7795,7 +7821,7 @@ body ::-webkit-scrollbar-track {
   width: 12rem;
   margin: 0 0.8rem;
   color: #fff;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -8007,7 +8033,7 @@ body ::-webkit-scrollbar-track {
   gap: 0 0.4rem;
 }
 .dashboard-main .dashboard-current-center .crw-data-head .bind .radio-txt2.rounded span {
-  padding: 0.44rem 0.4rem;
+  padding: 0.44rem 0.6rem;
   font-size: 1.4rem;
 }
 .dashboard-main .dashboard-current-center .crw-chart {
@@ -8102,7 +8128,7 @@ body ::-webkit-scrollbar-track {
   line-height: normal;
   font-size: 1.6rem;
   color: #5285aa;
-  font-weight: 500;
+  font-weight: 600;
 }
 .dashboard-main .dashboard-current-right .event-current-chart-wrap {
   width: 16.1rem;
@@ -8214,7 +8240,7 @@ body ::-webkit-scrollbar-track {
   line-height: normal;
   font-size: 1.6rem;
   color: #5285aa;
-  font-weight: 500;
+  font-weight: 600;
 }
 .dashboard-main .dashboard-current-right .event-current-count dd {
   line-height: 3.1rem;
@@ -8899,9 +8925,8 @@ body ::-webkit-scrollbar-track {
 }
 .dashboard-status-filter .left .btn-md2 {
   padding: 0 1rem;
-  line-height: 2.8rem;
-  font-size: 1.8rem;
-  font-weight: 400;
+  line-height: 2.5rem;
+  font-size: 1.6rem;
 }
 .dashboard-status-filter .left .btn-md2.active {
   background: #1e5f8d;
@@ -8925,6 +8950,10 @@ body ::-webkit-scrollbar-track {
   -ms-flex-line-pack: center;
       align-content: center;
   gap: 0 1rem;
+}
+.dashboard-status-filter .right .selectbox-wrap.primary select {
+  height: 3rem;
+  font-size: 1.6rem;
 }
 .dashboard-status-head {
   display: -webkit-box;
