--- a/base/css/is.css
+++ b/base/css/is.css
@@ -752,21 +752,28 @@
           transform: rotate(180deg);
 }
 .crossroads-flow-board .flow-stats-detail.reverse .road-name {
-  padding: 1.7rem 0 0;
+  height: 3.8rem;
+  padding: 0.5rem 0 0;
 }
 .crossroads-flow-board .flow-stats-detail .road-name {
   display: block;
-  padding-bottom: 1.7rem;
+  padding-bottom: 0.5rem;
   text-align: center;
+  margin-left: -0.2rem;
+  margin-right: -0.2rem;
+  border-left: 1px solid #fff;
+  border-right: 1px solid #fff;
+  background: #fff;
 }
 .crossroads-flow-board .flow-stats-detail .road-name em {
-  display: inline-block;
-  padding: 0 0.4rem;
-  line-height: 2.1rem;
+  display: block;
+  padding: 0 0.6rem;
+  line-height: 2.5rem;
   font-size: 1.4rem;
-  color: #fff;
+  color: #5285aa;
   font-weight: 500;
-  background: rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+  background: #f0f8fa;
 }
 .crossroads-flow-board .flow-stats-detail .arrow {
   display: -webkit-box;
@@ -1040,7 +1047,7 @@
   font-weight: 600;
 }
 .crossroads-flow-traffic .flow-traffic-data li em:first-child {
-  width: 20.5rem;
+  width: 19rem;
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
@@ -1056,7 +1063,12 @@
   font-weight: 500;
 }
 .crossroads-flow-traffic .flow-traffic-data li span:first-child {
-  width: 20.5rem;
+  width: 19rem;
+  padding-left: 1.5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
@@ -2329,7 +2341,7 @@
   color: #6d6d6d;
 }
 .roi-view-container .perceive-section {
-  padding: 2.9rem 3rem 2.8rem;
+  padding: 2.8rem 3rem;
   border-bottom: 1px solid #e8e8e8;
 }
 .roi-view-container .perceive-header {
@@ -2374,7 +2386,7 @@
 }
 .roi-view-container .perceive-body table tr + tr th,
 .roi-view-container .perceive-body table tr + tr td {
-  padding-top: 0.4rem;
+  padding-top: 0.5rem;
 }
 .roi-view-container .perceive-body table th {
   text-align: left;
@@ -2392,7 +2404,7 @@
   border-color: #cbcbcb;
 }
 .roi-view-container .roi-set-section {
-  padding: 3.2rem 3rem 2.8rem;
+  padding: 2.8rem 3rem;
   border-bottom: 1px solid #e8e8e8;
 }
 .roi-view-container .roi-set-area-button-group {
@@ -2411,7 +2423,43 @@
           align-items: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  margin-top: 1.4rem;
+  margin-top: 1.5rem;
+}
+.roi-view-container .roi-set-area-button-group.sm {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  overflow: hidden;
+  border: 1px solid #cbcbcb;
+  border-radius: 0.5rem;
+}
+.roi-view-container .roi-set-area-button-group.sm button,
+.roi-view-container .roi-set-area-button-group.sm a {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 30%;
+          flex: 1 1 30%;
+  max-width: calc(33.333% - 0.5px);
+  line-height: 2.8rem;
+  border: 0;
+  border-left: 1px solid #cbcbcb;
+}
+.roi-view-container .roi-set-area-button-group.sm button:nth-child(1), .roi-view-container .roi-set-area-button-group.sm button:nth-child(2), .roi-view-container .roi-set-area-button-group.sm button:nth-child(3),
+.roi-view-container .roi-set-area-button-group.sm a:nth-child(1),
+.roi-view-container .roi-set-area-button-group.sm a:nth-child(2),
+.roi-view-container .roi-set-area-button-group.sm a:nth-child(3) {
+  border-bottom: 1px solid #cbcbcb;
+}
+.roi-view-container .roi-set-area-button-group.sm button:nth-child(3n+1),
+.roi-view-container .roi-set-area-button-group.sm a:nth-child(3n+1) {
+  border-left: 0;
+}
+.roi-view-container .roi-set-area-button-group.sm button:first-child,
+.roi-view-container .roi-set-area-button-group.sm a:first-child {
+  border-radius: 0;
+  border-left: 0;
+}
+.roi-view-container .roi-set-area-button-group.sm button:last-child,
+.roi-view-container .roi-set-area-button-group.sm a:last-child {
+  border-radius: 0;
 }
 .roi-view-container .roi-set-area-button-group button,
 .roi-view-container .roi-set-area-button-group a {
@@ -2486,12 +2534,13 @@
           box-sizing: border-box;
 }
 .roi-view-container .roi-set-list-section {
-  padding: 3.2rem 3rem 0;
+  padding: 2.8rem 3rem;
 }
 .roi-view-container .roi-set-list-section .data-tbl-gray table {
   width: 100%;
 }
 .roi-view-container .roi-set-list-section .data-tbl-gray table td {
+  padding: 0.69rem 0;
   vertical-align: middle;
 }
 .roi-view-container .roi-set-list-section .data-tbl-gray table td [class*=color] {
@@ -2530,7 +2579,7 @@
           align-items: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  margin-bottom: 1.6rem;
+  margin-bottom: 1.5rem;
 }
 .roi-view-container .roi-set-list-header .right {
   display: -webkit-box;
@@ -2803,7 +2852,7 @@
           align-items: flex-start;
   -ms-flex-line-pack: center;
       align-content: center;
-  padding: 2.6rem 2.4rem 1.8rem 2.4rem;
+  padding: 4rem 2.4rem 1.8rem 2.4rem;
 }
 .roi-view-header h2 {
   display: -webkit-box;
@@ -2860,7 +2909,7 @@
 }
 .tab-accidental-roi .perceive-body table tr + tr th,
 .tab-accidental-roi .perceive-body table tr + tr td {
-  padding-top: 1rem;
+  padding-top: 0.5rem;
 }
 .tab-accidental-roi .roi-set-list-section .data-tbl-gray.xs {
   height: 23.1rem;
@@ -2913,6 +2962,12 @@
 /*---------------------------------------------------------------
   [미디어 쿼리]
 -----------------------------------------------------------------*/
+@media screen and (max-height: 925px) {
+  /* 영상인식 ROI설정 > 객체ROI/돌발ROI/교차로ROI */
+  .roi-view-header {
+    padding-top: 1.8rem;
+  }
+}
 @media screen and (max-height: 955px) {
   /* 교차로 상세 > 돌발 탭 컨텐츠 */
   .crossroad-view-container .cr-camera-view,
