--- a/base/css/is.css
+++ b/base/css/is.css
@@ -716,9 +716,41 @@
   height: 64.9rem;
   margin: 4.6rem auto 0;
 }
+.crossroads-flow-board .flow-stats-wrap.lane-2 .flow-stats-top .flow-stats-detail,
+.crossroads-flow-board .flow-stats-wrap.lane-2 .flow-stats-bot .flow-stats-detail {
+  position: relative;
+  border: 0;
+}
+.crossroads-flow-board .flow-stats-wrap.lane-2 .flow-stats-top .flow-stats-detail::after,
+.crossroads-flow-board .flow-stats-wrap.lane-2 .flow-stats-bot .flow-stats-detail::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background: url(/base/images/icon_forbid.png) no-repeat 50% 50% #f8f8f8;
+  background-size: 4.9rem;
+}
+.crossroads-flow-board .flow-stats-wrap.lane-3 .flow-stats-bot .flow-stats-detail {
+  position: relative;
+  border: 0;
+}
+.crossroads-flow-board .flow-stats-wrap.lane-3 .flow-stats-bot .flow-stats-detail::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background: url(/base/images/icon_forbid.png) no-repeat 50% 50% #f8f8f8;
+  background-size: 4.9rem;
+}
 .crossroads-flow-board .flow-stats-detail {
-  width: 19.7rem;
-  height: 22.6rem;
+  width: 20rem;
+  height: 21.8rem;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-top: 0;
 }
@@ -946,22 +978,22 @@
           align-items: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  height: 19.7rem;
+  height: 20rem;
 }
 .crossroads-flow-board .flow-stats-mid .flow-stats-detail {
   margin-top: -0.2rem;
   border-width: 0.5px;
 }
 .crossroads-flow-board .flow-stats-mid .flow-stats-detail:first-child {
-  -webkit-transform: rotate(-90deg);
-      -ms-transform: rotate(-90deg);
-          transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg) translateY(0.1rem);
+      -ms-transform: rotate(-90deg) translateY(0.1rem);
+          transform: rotate(-90deg) translateY(0.1rem);
   margin-left: 0.95rem;
 }
 .crossroads-flow-board .flow-stats-mid .flow-stats-detail:last-child {
-  -webkit-transform: rotate(90deg);
-      -ms-transform: rotate(90deg);
-          transform: rotate(90deg);
+  -webkit-transform: rotate(90deg) translateY(0.1rem);
+      -ms-transform: rotate(90deg) translateY(0.1rem);
+          transform: rotate(90deg) translateY(0.1rem);
   margin-right: 0.95rem;
 }
 .crossroads-flow-board .flow-stats-bot .flow-stats-detail {
