--- a/base/css/style.css
+++ b/base/css/style.css
@@ -635,42 +635,6 @@ body ::-webkit-scrollbar-track {
   background-position: 0 0;
   background-size: contain;
 }
-.ico-sudden1 {
-  display: inline-block;
-  width: 2.5rem;
-  height: 2.5rem;
-  background-image: url("/base/images/icon_accidental1.png");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  background-size: contain;
-}
-.ico-sudden2 {
-  display: inline-block;
-  width: 2.5rem;
-  height: 2.5rem;
-  background-image: url("/base/images/icon_accidental2.png");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  background-size: contain;
-}
-.ico-sudden3 {
-  display: inline-block;
-  width: 2.5rem;
-  height: 2.5rem;
-  background-image: url("/base/images/icon_accidental3.png");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  background-size: contain;
-}
-.ico-sudden4 {
-  display: inline-block;
-  width: 2.5rem;
-  height: 2.5rem;
-  background-image: url("/base/images/icon_accidental4.png");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  background-size: contain;
-}
 .ico-hindrance1 {
   display: inline-block;
   width: 2.5rem;
@@ -4307,6 +4271,9 @@ body ::-webkit-scrollbar-track {
 .modal-body .data-tbl .bind-inline.gap-w15 {
   gap: 0 1rem;
 }
+.modal-body .data-tbl .bind-inline.gap-w15-2 {
+  gap: 0 1.5rem;
+}
 .modal-body .data-tbl .height-extend {
   height: 9.6rem;
   font-size: 1.6rem;
@@ -5195,17 +5162,14 @@ body ::-webkit-scrollbar-track {
           align-items: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  padding: 1.15rem 1rem;
+  padding: 0.8rem 1rem;
   border-radius: 0.5rem;
   border: 1px solid #e8e8e8;
 }
 .sudden-disorder-popup .tab-sudden-list li + li {
   margin-top: 0.4rem;
 }
-.sudden-disorder-popup .tab-sudden-list li > .txt {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+.sudden-disorder-popup .tab-sudden-list li .txt-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -5221,58 +5185,88 @@ body ::-webkit-scrollbar-track {
           align-items: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  gap: 0 0.6rem;
-  margin: 0;
-  padding-right: 0.4rem;
-  line-height: 100%;
+  gap: 0 0.7rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+.sudden-disorder-popup .tab-sudden-list li .txt-wrap .txt em {
+  display: block;
+  max-width: 20rem;
+  line-height: 1.4rem;
+  font-size: 1.4rem;
+  color: #727272;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
+}
+.sudden-disorder-popup .tab-sudden-list li .txt-wrap .txt time {
+  display: block;
+  line-height: 1.2rem;
+  margin-top: 0.4rem;
   font-size: 1.2rem;
-}
-.sudden-disorder-popup .tab-sudden-list li > .txt span {
   color: #999999;
+  font-weight: 300;
 }
-.sudden-disorder-popup .tab-sudden-list li > .txt em {
-  color: #3d3d3d;
-}
-.sudden-disorder-popup .tab-sudden-list li > .txt .txt-badge {
+.sudden-disorder-popup .tab-sudden-list li [class*=noti-sudden] {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 auto;
-          flex: 0 0 auto;
+      -ms-flex: 0 0 8.2rem;
+          flex: 0 0 8.2rem;
+  line-height: 2rem;
+  text-align: center;
+  font-size: 1.4rem;
+  font-weight: 600;
+  border-radius: 2rem;
+}
+.sudden-disorder-popup .tab-sudden-list li .noti-sudden1 {
+  color: #324b7e;
+  background: #d8deea;
+}
+.sudden-disorder-popup .tab-sudden-list li .noti-sudden2 {
+  color: #64859c;
+  background: #d0e0ec;
+}
+.sudden-disorder-popup .tab-sudden-list li .noti-sudden3 {
+  color: #8db5d1;
+  background: #ecf7ff;
+}
+.sudden-disorder-popup .tab-sudden-list li .noti-sudden4 {
+  color: #b24974;
+  background: #ffe9f2;
 }
 .sudden-disorder-popup .tab-sudden-list li.read {
-  border-color: #f8f8f8;
   background: #f8f8f8;
 }
-.sudden-disorder-popup .tab-sudden-list li.read .txt span,
-.sudden-disorder-popup .tab-sudden-list li.read .txt em {
+.sudden-disorder-popup .tab-sudden-list li.read [class*=noti-sudden] {
   color: #cbcbcb;
+  background: #e8e8e8;
 }
-.sudden-disorder-popup .tab-sudden-list li.read .txt .txt-badge.c-peach {
-  background: #f8f8f8;
-  border: 1px solid #cbcbcb;
+.sudden-disorder-popup .tab-sudden-list li.read .txt-wrap .txt em,
+.sudden-disorder-popup .tab-sudden-list li.read .txt-wrap .txt time {
   color: #cbcbcb;
-}
-.sudden-disorder-popup .tab-sudden-list li.read .ui.button.basic.secondary.c-gray-type3 {
-  background: #f8f8f8 !important;
-  border: 1px solid #cbcbcb !important;
-  color: #cbcbcb !important;
-}
-.sudden-disorder-popup .tab-sudden-list li.read .ui.button.basic.secondary.c-gray-type3:hover {
-  background: #f8f8f8 !important;
 }
 .sudden-disorder-popup .tab-sudden-list li .btn-bind {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  gap: 0 1rem;
   font-size: 0;
 }
 .sudden-disorder-popup .tab-sudden-list li .btn-bind button {
   padding: 0;
-}
-.sudden-disorder-popup .tab-sudden-list li .btn-bind button:nth-child(2) {
-  margin-left: 1rem;
-}
-.sudden-disorder-popup .tab-sudden-list li.more {
-  padding: 0;
-}
-.sudden-disorder-popup .tab-sudden-list li.more button {
-  height: 4.3rem;
 }
 .sudden-disorder-check {
   display: -webkit-box;
@@ -5323,19 +5317,39 @@ body ::-webkit-scrollbar-track {
   color: #727272;
 }
 
-.tab-disorder .tab-sudden-list li:not(.read):hover {
-  border-color: #ebebeb;
-  background: #ebebeb;
+.tab-disorder .tab-sudden-list li {
+  gap: 0 1rem;
 }
-.tab-disorder .tab-sudden-list li:not(.read):hover .ui.button.basic.secondary.c-gray-type3 {
-  background: #ebebeb !important;
+.tab-disorder .tab-sudden-list li .noti-block {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 11.1rem;
+          flex: 0 0 11.1rem;
+  line-height: 2.2rem;
+  text-align: center;
+  font-size: 1.4rem;
+  font-weight: 600;
+  border-radius: 1rem;
+  color: #ca4e4e;
+  background: #ffeaea;
 }
-.tab-disorder .tab-sudden-list li .txt-badge {
-  max-width: 14.3rem;
+.tab-disorder .tab-sudden-list li .txt em {
+  display: block;
+  max-width: 22rem;
+  line-height: 1.4rem;
+  font-size: 1.4rem;
+  color: #727272;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   word-wrap: normal;
+}
+.tab-disorder .tab-sudden-list li .txt time {
+  display: block;
+  line-height: 1.2rem;
+  margin-top: 0.4rem;
+  font-size: 1.2rem;
+  color: #999999;
+  font-weight: 300;
 }
 .tab-disorder .sudden-disorder-check {
   -webkit-box-pack: end;
@@ -8611,7 +8625,7 @@ body.is-notify-position-adjust #notify.bottom-left {
 }
 .dashboard-reform-body .dashboard-noti-list {
   overflow-y: auto;
-  max-height: 17.8rem;
+  max-height: 18rem;
   margin: 0 2rem;
 }
 .dashboard-reform-body .dashboard-noti-list::-webkit-scrollbar {
@@ -8625,47 +8639,58 @@ body.is-notify-position-adjust #notify.bottom-left {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  gap: 0 1rem;
-  padding: 0.644rem 1rem;
+  gap: 0 0.7rem;
+  padding: 1.24rem 1rem;
   border-radius: 0.5rem;
   background: #f8f8f8;
 }
 .dashboard-reform-body .dashboard-noti-list li + li {
   margin-top: 0.3rem;
 }
-.dashboard-reform-body .dashboard-noti-list li .noti-info {
+.dashboard-reform-body .dashboard-noti-list li [class*=sign-sudden] {
+  width: 7.1rem;
+  line-height: 1.8rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-align: center;
+  border-radius: 2rem;
+}
+.dashboard-reform-body .dashboard-noti-list li .sign-sudden1 {
+  color: #324b7e;
+  background: #d8deea;
+}
+.dashboard-reform-body .dashboard-noti-list li .sign-sudden2 {
+  color: #64859c;
+  background: #d0e0ec;
+}
+.dashboard-reform-body .dashboard-noti-list li .sign-sudden3 {
+  color: #8db5d1;
+  background: #ecf7ff;
+}
+.dashboard-reform-body .dashboard-noti-list li .sign-sudden4 {
+  color: #b13c3c;
+  background: #ffdada;
+}
+.dashboard-reform-body .dashboard-noti-list li .txt {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-}
-.dashboard-reform-body .dashboard-noti-list li .noti-info p {
-  max-width: 20.9rem;
-  margin-bottom: 0;
+  max-width: 16rem;
   font-size: 1.2rem;
   color: #727272;
+  text-align: left;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   word-wrap: normal;
-}
-.dashboard-reform-body .dashboard-noti-list li .noti-info p em {
-  display: inline-block;
-  margin-right: 0.5rem;
-  font-weight: 600;
-}
-.dashboard-reform-body .dashboard-noti-list li .noti-info time {
-  display: block;
-  line-height: 1.2rem;
-  font-size: 1.1rem;
-  color: #cbcbcb;
 }
 .dashboard-reform-body .dashboard-noti-list li .pass {
   line-height: 1.8rem;
@@ -8676,6 +8701,14 @@ body.is-notify-position-adjust #notify.bottom-left {
   max-height: 22.2rem;
   margin-top: 1.7rem;
   margin-bottom: 1.7rem;
+}
+.dashboard-reform-body .hindrance-container .dashboard-noti-list li {
+  padding: 0.85rem 1rem;
+}
+.dashboard-reform-body .hindrance-container .dashboard-noti-list li .txt {
+  max-width: 21.7rem;
+  margin-bottom: 0;
+  line-height: normal;
 }
 .dashboard-reform-body .congested-ranking-container .gap-tbl {
   padding: 1.5rem;
